force-app/main/default/objects/Question_Master__c/Question_Master__c.object-meta.xml
<CustomObject>
    <label>Question Master</label>
    <nameField>
        <label>Question Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>