force-app/main/default/objects/Question_Master__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Questions Master</relationshipLabel>
    <relationshipName>Questions_Master</relationshipName>
    <type>Lookup</type>
</CustomField>