force-app/main/default/objects/Question_Master__c/fields/Question_Title__c.field-meta.xml
<CustomField>
    <fullName>Question_Title__c</fullName>
    <label>Question Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>